<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Movie Catalogue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Test</string>
    <string name="tv_show">TV Show</string>
    <string name="movies">Movies</string>
    <string name="settings">Settings</string>
    <string name="date">Release Date: </string>
    <string name="rating">Rating: </string>\
    <string name="overview">Overview:</string>
    <string name="popularity">Popularity:</string>
    <string name="fAirDate">First Air Date:</string>
    <string name="oriLang">Original Language:</string>
    <string name="home">Home</string>
    <string name="favorite">Favourite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="key_change_language">key_change_language</string>
    <string name="key_daily_reminder">key_daily_reminder</string>
    <string name="key_upcoming_reminder">key_upcoming_reminder</string>
    <string name="notif_message">Movie Catalogue is missing you</string>
    <string name="switch_daily">Turn ON/OFF daily reminder</string>
    <string name="switch_upcoming">Turn ON/OFF upcoming reminder</string>
    <string name="title_daily">Daily Reminder</string>
    <string name="title_upcoming">Upcoming Reminder</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_language">Language</string>
    <string name="title_change_language">Change Language</string>
    <string name="summary_language">Change your phone locale language</string>
</resources>
