<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Language">
        <Preference
            android:key="@string/key_change_language"
            android:summary="@string/summary_language"
            android:title="@string/title_change_language"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_reminder">
        <SwitchPreference android:title="@string/title_daily"
            android:key="@string/key_daily_reminder"
            android:summary="@string/switch_daily"
            android:defaultValue="false"

            />
        <SwitchPreference android:title="@string/title_upcoming"
            android:key="@string/key_upcoming_reminder"
            android:summary="@string/switch_upcoming"
            android:defaultValue="false"
            />
    </PreferenceCategory>
</PreferenceScreen>